--- a/style.css
+++ b/style.css
@@ -53,6 +53,14 @@ body {
 .column {
   padding: 10px;
 }
+.flex_column{
+  display: inline-flex;
+  flex-direction: column;
+  align-items: center;
+}
+.menu_icon{
+  width: 50px;
+}
 
 .mobile_header {
   display: none;
@@ -82,6 +90,8 @@ body {
 
 /*FOOTER*/
 .footer {
+  
+  font-size: 18px;
   background-color: #d71a21;
   padding: 10px 30px;
   margin: 5px 10px 0px;
@@ -104,6 +114,9 @@ body {
   padding: 0;
 }
 
+.footer_icon{
+  margin-right: 10px;
+}
 /*=====================MAIN==========================*/
 .main{
   padding: 5px 30px;
